# bazel-helloworld

./: .gitignore  .scalafmt.conf  BUILD.bazel  README.md  WORKSPACE.bazel
one/src/main/scala/com/one/helloworld/: Greeting.scala
project/: plugins.bzl
service/one/src/main/scala/com/one/helloworld/: Greeting.scala  Runner.scala
service/two/src/main/scala/com/helloworld/: Greeting.scala  Runner.scala
src/main/scala/com/helloworld/: Greeting.scala  Runner.scala
src/main/scala/com/helloworld/cmd/: BUILD.bazel  Runner.scala
