# Main build
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary")

scala_library (
    name = "greeter",
    srcs = ["src/main/scala/com/helloworld/Greeting.scala"],
    visibility = ["//src/main/scala/com/helloworld/cmd:__pkg__"]
)

scala_binary (
    name = "Runner",
    srcs = ["src/main/scala/com/helloworld/Runner.scala"],
    main_class = "com.helloworld.Runner",
    deps = [":greeter"],
)
