load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary")

scala_binary(
  name = "service_one",
  srcs = glob(["service/one/src/main/scala/**/*.scala"]),
  main_class = "com.one.helloworld.Runner",
  visibility = ["//visibility:public"],
)

scala_binary(
  name = "service_two",
  srcs = glob(["service/two/src/main/scala/**/*.scala"]),
  main_class = "com.two.helloworld.Runner",
  visibility = ["//visibility:public"],
  deps = [
    ":service_one"
  ]
)
